--- a/package.json
+++ b/package.json
@@ -1,33 +1,54 @@
 {
-  "name": "react-library-boilerplate",
+  "name": "vibra-react",
   "version": "1.0.0",
-  "description": "A lightweight, type-safe React component library boilerplate",
+  "description": "A modern, type-safe React component library for building accessible and performant web applications with Vibra integration",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts --external react",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --external react --watch",
     "test": "jest",
-    "prepublishOnly": "bun run build",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepublishOnly": "npm run build && npm run test && npm run lint && npm run type-check",
+    "prepare": "husky install"
   },
   "keywords": [
     "react",
-    "library",
-    "boilerplate",
+    "components",
     "typescript",
-    "components"
+    "vibra",
+    "ui-library",
+    "accessible",
+    "design-system"
   ],
   "author": "Roberto Ríos <roberto@rrios.dev>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rrios-dev/react-library-boilerplate"
+    "url": "https://github.com/rrios-dev/vibra-react"
+  },
+  "bugs": {
+    "url": "https://github.com/rrios-dev/vibra-react/issues"
+  },
+  "homepage": "https://github.com/rrios-dev/vibra-react#readme",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -55,17 +76,32 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "storybook": "^8.6.14",
     "ts-jest": "^29.3.4",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.32.1",
+    "vibra": "^1.0.2",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   },
   "peerDependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vibra": "^1.0.2"
   }
 }
